--- a/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_Handle_invalid_prow_config.yaml
+++ b/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_Handle_invalid_prow_config.yaml
@@ -1,4 +1,10 @@
 metadata:
+  annotations:
+    ephemeralcluster.ci.openshift.io/pr-event-headers: '{"X-Github-Delivery": "aa9ede40-8fbb-11f0-8717-9eed0c1315d0"}'
+    ephemeralcluster.ci.openshift.io/pr-event-payload: "\n{\n  \"pull_request\": {\n
+      \   \"base\": {\n\t  \"repo\": {\n\t    \"name\": \"ci-tools\",\n\t    \"owner\":
+      {\n\t\t  \"login\": \"openshift\"\n\t\t}\n\t  },\n\t  \"ref\": \"main\",\n\t
+      \ \"sha\": \"8f5e7d6ec106ccf86684fcff808d85cac960f0a3\"\n\t}\n  }\n}"
   creationTimestamp: null
   name: ec
   namespace: ns
@@ -19,7 +25,7 @@ spec:
 status:
   conditions:
   - lastTransitionTime: "2025-04-02T12:12:12Z"
-    message: 'validate and default presubmit: invalid presubmit job ephemeralcluster-ci-org-repo-branch-cluster-provisioning:
+    message: 'validate and default presubmit: invalid presubmit job ephemeralcluster-ci-openshift-ci-tools-main-cluster-provisioning:
       failed to default namespace'
     reason: CIOperatorJobsGenerateFailure
     status: "False"
