cluster-init: add registry-pull-credentials to ocp

--- a/test/integration/cluster-init/update-build99/expected/core-services/ci-secret-bootstrap/_config.yaml
+++ b/test/integration/cluster-init/update-build99/expected/core-services/ci-secret-bootstrap/_config.yaml
@@ -268,6 +268,10 @@ secret_configs:
     name: registry-pull-credentials
     namespace: keel
     type: kubernetes.io/dockerconfigjson
+  - cluster: newCluster
+    name: registry-pull-credentials
+    namespace: ocp
+    type: kubernetes.io/dockerconfigjson
 - from:
     .dockerconfigjson:
       dockerconfigJSON:
@@ -338,6 +342,10 @@ secret_configs:
   - cluster: build99
     name: registry-pull-credentials
     namespace: keel
+    type: kubernetes.io/dockerconfigjson
+  - cluster: build99
+    name: registry-pull-credentials
+    namespace: ocp
     type: kubernetes.io/dockerconfigjson
 - from:
     kubeconfig:
