--- a/test/integration/cluster-init/update-build99/input/core-services/ci-secret-bootstrap/_config.yaml
+++ b/test/integration/cluster-init/update-build99/input/core-services/ci-secret-bootstrap/_config.yaml
@@ -216,6 +216,10 @@ secret_configs:
         name: registry-pull-credentials
         namespace: keel
         type: kubernetes.io/dockerconfigjson
+      - cluster: newCluster
+        name: registry-pull-credentials
+        namespace: ocp
+        type: kubernetes.io/dockerconfigjson
       - from:
           kubeconfig:
             field: sa.ci-operator.newCluster.config
