--- a/pkg/steps/testdata/zz_fixture_TestCreateBuild_with_extra_refs_setting_workdir_and_path_alias.yaml
+++ b/pkg/steps/testdata/zz_fixture_TestCreateBuild_with_extra_refs_setting_workdir_and_path_alias.yaml
@@ -53,10 +53,10 @@ spec:
     images:
     - from:
         kind: DockerImage
-        name: quay-proxy.ci.openshift.org/openshift/ci/ci:ci_managed-clonerefs_latest
+        name: quay-proxy.ci.openshift.org/openshift/ci:ci_clonerefs_latest
       paths:
       - destinationDir: .
-        sourcePath: /clonerefs
+        sourcePath: /ko-app/clonerefs
     type: Dockerfile
   strategy:
     dockerStrategy:
