--- a/pkg/steps/testdata/zz_fixture_TestCreateBuild_with_ssh_key.yaml
+++ b/pkg/steps/testdata/zz_fixture_TestCreateBuild_with_ssh_key.yaml
@@ -56,10 +56,10 @@ spec:
     images:
     - from:
         kind: DockerImage
-        name: quay-proxy.ci.openshift.org/openshift/ci/ci:ci_managed-clonerefs_latest
+        name: quay-proxy.ci.openshift.org/openshift/ci:ci_clonerefs_latest
       paths:
       - destinationDir: .
-        sourcePath: /clonerefs
+        sourcePath: /ko-app/clonerefs
       - destinationDir: .
         sourcePath: /ssh_config
     secrets:
