--- a/pkg/steps/release/testdata/zz_fixture_TestGetPromotionPod_promotion_quay.yaml
+++ b/pkg/steps/release/testdata/zz_fixture_TestGetPromotionPod_promotion_quay.yaml
@@ -2,7 +2,7 @@ metadata:
   creationTimestamp: null
   labels:
     ci-operator.openshift.io/save-container-logs: "true"
-  name: promotion
+  name: promotion-quay
   namespace: ci-op-9bdij1f6
 spec:
   containers:
@@ -10,6 +10,7 @@ spec:
     - |-
       oc image mirror --loglevel=10 --keep-manifest-list --registry-config=/etc/push-secret/.dockerconfigjson --max-per-registry=10 quay.io/openshift/ci:ci_a_latest=quay.io/openshift/ci:20240603235401_prune_ci_a_latest quay.io/openshift/ci:ci_c_latest=quay.io/openshift/ci:20240603235401_prune_ci_c_latest || true
       for r in {1..5}; do echo Mirror attempt $r; oc image mirror --loglevel=10 --keep-manifest-list --registry-config=/etc/push-secret/.dockerconfigjson --max-per-registry=10 registry.build02.ci.openshift.org/ci-op-y2n8rsh3/pipeline@sha256:bbb=quay.io/openshift/ci:ci_a_latest registry.build02.ci.openshift.org/ci-op-y2n8rsh3/pipeline@sha256:ddd=quay.io/openshift/ci:ci_c_latest && break; backoff=$(($RANDOM % 120))s; echo Sleeping randomized $backoff before retry; sleep $backoff; done
+      for r in {1..5}; do echo Tag attempt $r; oc tag --loglevel=10 --reference-policy='source' --import-mode='PreserveOriginal' quay-proxy.ci.openshift.org/openshift/ci:ci_c_latest registry.ci.openshift.org/ci/${component}-quay:c quay-proxy.ci.openshift.org/openshift/ci:ci_a_latest registry.ci.openshift.org/ci/ci-quay:${component} && break; backoff=$(($RANDOM % 120))s; echo Sleeping randomized $backoff before retry; sleep $backoff; done
     command:
     - /bin/sh
     - -c
