Add additional changes for slack reporter config exclusion

--- a/pkg/prowgen/testdata/zz_fixture_TestGenerateJobs_images_job_is_configured_for_slack_reporting.yaml
+++ b/pkg/prowgen/testdata/zz_fixture_TestGenerateJobs_images_job_is_configured_for_slack_reporting.yaml
@@ -17,3 +17,9 @@ presubmits:
     labels:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-organization-repository-branch-images
+    reporter_config:
+      slack:
+        channel: some-channel
+        job_states_to_report:
+        - error
+        report_template: some template
