--- a/pkg/prowgen/testdata/zz_fixture_TestNewProwJobBaseBuilderForTest_job_excluded_by_patterns_should_not_have_slack_reporter_config.yaml
+++ b/pkg/prowgen/testdata/zz_fixture_TestNewProwJobBaseBuilderForTest_job_excluded_by_patterns_should_not_have_slack_reporter_config.yaml
@@ -2,14 +2,14 @@ agent: kubernetes
 decorate: true
 decoration_config:
   skip_cloning: true
-name: prefix-ci-o-r-b-unit
+name: prefix-ci-o-r-b-unit-skip
 spec:
   containers:
   - args:
     - --gcs-upload-secret=/secrets/gcs/service-account.json
     - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
     - --report-credentials-file=/etc/report/credentials
-    - --target=unit
+    - --target=unit-skip
     command:
     - ci-operator
     image: quay-proxy.ci.openshift.org/openshift/ci:ci_ci-operator_latest
