--- a/pkg/steps/release/testdata/zz_fixture_TestGetPromotionPod_basic_case__arm64_only.yaml
+++ b/pkg/steps/release/testdata/zz_fixture_TestGetPromotionPod_basic_case__arm64_only.yaml
@@ -15,12 +15,18 @@ spec:
     command:
     - /bin/sh
     - -c
+    env:
+    - name: KUBECONFIG
+      value: /etc/app-ci-kubeconfig/kubeconfig
     image: registry.ci.openshift.org/ocp-arm64/4.14:cli
     name: promotion
     resources: {}
     volumeMounts:
     - mountPath: /etc/push-secret
       name: push-secret
+      readOnly: true
+    - mountPath: /etc/app-ci-kubeconfig
+      name: app-ci-kubeconfig
       readOnly: true
   nodeSelector:
     kubernetes.io/arch: arm64
@@ -29,4 +35,7 @@ spec:
   - name: push-secret
     secret:
       secretName: registry-push-credentials-ci-central
+  - name: app-ci-kubeconfig
+    secret:
+      secretName: promotion-quay-tagger-kubeconfig
 status: {}
