--- a/pkg/steps/release/testdata/zz_fixture_TestGetPromotionPod_promotion_quay.yaml
+++ b/pkg/steps/release/testdata/zz_fixture_TestGetPromotionPod_promotion_quay.yaml
@@ -10,16 +10,22 @@ spec:
     - |-
       oc image mirror --loglevel=10 --keep-manifest-list --registry-config=/etc/push-secret/.dockerconfigjson --max-per-registry=10 quay.io/openshift/ci:ci_a_latest=quay.io/openshift/ci:20240603235401_prune_ci_a_latest quay.io/openshift/ci:ci_c_latest=quay.io/openshift/ci:20240603235401_prune_ci_c_latest || true
       for r in {1..5}; do echo Mirror attempt $r; oc image mirror --loglevel=10 --keep-manifest-list --registry-config=/etc/push-secret/.dockerconfigjson --max-per-registry=10 registry.build02.ci.openshift.org/ci-op-y2n8rsh3/pipeline@sha256:bbb=quay.io/openshift/ci:ci_a_latest registry.build02.ci.openshift.org/ci-op-y2n8rsh3/pipeline@sha256:ddd=quay.io/openshift/ci:ci_c_latest && break; backoff=$(($RANDOM % 120))s; echo Sleeping randomized $backoff before retry; sleep $backoff; done
-      for r in {1..5}; do echo Tag attempt $r; oc tag --loglevel=10 --reference-policy='source' --import-mode='PreserveOriginal' quay-proxy.ci.openshift.org/openshift/ci:ci_c_latest registry.ci.openshift.org/ci/${component}-quay:c quay-proxy.ci.openshift.org/openshift/ci:ci_a_latest registry.ci.openshift.org/ci/ci-quay:${component} && break; backoff=$(($RANDOM % 120))s; echo Sleeping randomized $backoff before retry; sleep $backoff; done
+      for r in {1..5}; do echo Tag attempt $r; oc tag --source=docker --loglevel=10 --reference-policy='source' --import-mode='PreserveOriginal' quay-proxy.ci.openshift.org/openshift/ci:ci_c_latest registry.ci.openshift.org/ci/${component}-quay:c quay-proxy.ci.openshift.org/openshift/ci:ci_a_latest registry.ci.openshift.org/ci/ci-quay:${component} && break; backoff=$(($RANDOM % 120))s; echo Sleeping randomized $backoff before retry; sleep $backoff; done
     command:
     - /bin/sh
     - -c
+    env:
+    - name: KUBECONFIG
+      value: /etc/app-ci-kubeconfig/kubeconfig
     image: registry.ci.openshift.org/ocp/4.14:cli
     name: promotion
     resources: {}
     volumeMounts:
     - mountPath: /etc/push-secret
       name: push-secret
+      readOnly: true
+    - mountPath: /etc/app-ci-kubeconfig
+      name: app-ci-kubeconfig
       readOnly: true
   nodeSelector:
     kubernetes.io/arch: amd64
@@ -28,4 +34,7 @@ spec:
   - name: push-secret
     secret:
       secretName: registry-push-credentials-ci-central
+  - name: app-ci-kubeconfig
+    secret:
+      secretName: promotion-quay-tagger-kubeconfig
 status: {}
