--- a/test/integration/cluster-init/update-build99/expected/ci-operator/jobs/openshift/release/openshift-release-master-periodics.yaml
+++ b/test/integration/cluster-init/update-build99/expected/ci-operator/jobs/openshift/release/openshift-release-master-periodics.yaml
@@ -66,7 +66,7 @@ periodics:
           secretKeyRef:
             key: build99-id
             name: build99-dex-oidc
-      image: applyconfig:latest
+      image: quay.io/openshift/ci-public:ci_applyconfig_latest
       imagePullPolicy: Always
       name: ""
       resources:
