--- a/test/integration/cluster-init/update-build99/expected/core-services/ci-secret-bootstrap/_config.yaml
+++ b/test/integration/cluster-init/update-build99/expected/core-services/ci-secret-bootstrap/_config.yaml
@@ -19,23 +19,6 @@ cluster_groups:
   - build99
 secret_configs:
 - from:
-    app.ci.config:
-      field: sa.pod-scaler.app.ci.config
-      item: pod-scaler
-    build01.config:
-      field: sa.pod-scaler.build01.config
-      item: pod-scaler
-    build99.config:
-      field: sa.pod-scaler.build99.config
-      item: pod-scaler
-    sa.pod-scaler.build99.token.txt:
-      field: sa.pod-scaler.build99.token.txt
-      item: pod-scaler
-  to:
-  - cluster: app.ci
-    name: pod-scaler
-    namespace: ci
-- from:
     build01_github_client_id:
       field: github_client_id
       item: build_farm_01_cluster
@@ -44,24 +27,35 @@ secret_configs:
     name: build-farm-credentials
     namespace: ci
 - from:
-    sa.crier.app.ci.config:
-      field: sa.crier.app.ci.config
+    sa.ci-chat-bot.arm01.config:
+      field: sa.ci-chat-bot.arm01.config
+      item: ci-chat-bot
+    sa.ci-chat-bot.build01.config:
+      field: sa.ci-chat-bot.build01.config
+      item: ci-chat-bot
+    sa.ci-chat-bot.build99.config:
+      field: sa.ci-chat-bot.build99.config
+      item: ci-chat-bot
+    sa.ci-chat-bot.build99.token.txt:
+      field: sa.ci-chat-bot.build99.token.txt
+      item: ci-chat-bot
+  to:
+  - cluster: app.ci
+    name: ci-chat-bot-kubeconfigs
+    namespace: ci
+- from:
+    sa.cluster-display.build01.config:
+      field: sa.cluster-display.build01.config
       item: build_farm
-    sa.crier.arm01.config:
-      field: sa.crier.arm01.config
+    sa.cluster-display.build99.config:
+      field: sa.cluster-display.build99.config
       item: build_farm
-    sa.crier.build01.config:
-      field: sa.crier.build01.config
-      item: build_farm
-    sa.crier.build99.config:
-      field: sa.crier.build99.config
-      item: build_farm
-    sa.crier.build99.token.txt:
-      field: sa.crier.build99.token.txt
+    sa.cluster-display.build99.token.txt:
+      field: sa.cluster-display.build99.token.txt
       item: build_farm
   to:
   - cluster: app.ci
-    name: crier
+    name: cluster-display
     namespace: ci
 - from:
     sa.config-updater.app.ci.config:
@@ -84,6 +78,26 @@ secret_configs:
     name: config-updater
     namespace: vault
 - from:
+    sa.crier.app.ci.config:
+      field: sa.crier.app.ci.config
+      item: build_farm
+    sa.crier.arm01.config:
+      field: sa.crier.arm01.config
+      item: build_farm
+    sa.crier.build01.config:
+      field: sa.crier.build01.config
+      item: build_farm
+    sa.crier.build99.config:
+      field: sa.crier.build99.config
+      item: build_farm
+    sa.crier.build99.token.txt:
+      field: sa.crier.build99.token.txt
+      item: build_farm
+  to:
+  - cluster: app.ci
+    name: crier
+    namespace: ci
+- from:
     sa.deck.app.ci.config:
       field: sa.deck.app.ci.config
       item: build_farm
@@ -104,6 +118,37 @@ secret_configs:
     name: deck
     namespace: ci
 - from:
+    sa.dptp-controller-manager.build01.config:
+      field: sa.dptp-controller-manager.build01.config
+      item: build_farm
+    sa.dptp-controller-manager.build99.config:
+      field: sa.dptp-controller-manager.build99.config
+      item: build_farm
+    sa.dptp-controller-manager.build99.token.txt:
+      field: sa.dptp-controller-manager.build99.token.txt
+      item: build_farm
+  to:
+  - cluster: app.ci
+    name: dptp-controller-manager
+    namespace: ci
+- from:
+    sa.github-ldap-user-group-creator.arm01.config:
+      field: sa.github-ldap-user-group-creator.arm01.config
+      item: build_farm
+    sa.github-ldap-user-group-creator.build01.config:
+      field: sa.github-ldap-user-group-creator.build01.config
+      item: build_farm
+    sa.github-ldap-user-group-creator.build99.config:
+      field: sa.github-ldap-user-group-creator.build99.config
+      item: build_farm
+    sa.github-ldap-user-group-creator.build99.token.txt:
+      field: sa.github-ldap-user-group-creator.build99.token.txt
+      item: build_farm
+  to:
+  - cluster: app.ci
+    name: github-ldap-user-group-creator
+    namespace: ci
+- from:
     sa.hook.app.ci.config:
       field: sa.hook.app.ci.config
       item: build_farm
@@ -122,6 +167,52 @@ secret_configs:
   to:
   - cluster: app.ci
     name: hook
+    namespace: ci
+- from:
+    sa.ci-operator.arm01.config:
+      field: sa.ci-operator.arm01.config
+      item: build_farm
+    sa.ci-operator.build01.config:
+      field: sa.ci-operator.build01.config
+      item: build_farm
+    sa.pj-rehearse.app.ci.config:
+      field: sa.pj-rehearse.app.ci.config
+      item: build_farm
+  to:
+  - cluster_groups:
+    - build_farm
+    name: pj-rehearse
+    namespace: ci
+- from:
+    app.ci.config:
+      field: sa.pod-scaler.app.ci.config
+      item: pod-scaler
+    build01.config:
+      field: sa.pod-scaler.build01.config
+      item: pod-scaler
+    build99.config:
+      field: sa.pod-scaler.build99.config
+      item: pod-scaler
+    sa.pod-scaler.build99.token.txt:
+      field: sa.pod-scaler.build99.token.txt
+      item: pod-scaler
+  to:
+  - cluster: app.ci
+    name: pod-scaler
+    namespace: ci
+- from:
+    sa.promoted-image-governor.build01.config:
+      field: sa.promoted-image-governor.build01.config
+      item: build_farm
+    sa.promoted-image-governor.build99.config:
+      field: sa.promoted-image-governor.build99.config
+      item: build_farm
+    sa.promoted-image-governor.build99.token.txt:
+      field: sa.promoted-image-governor.build99.token.txt
+      item: build_farm
+  to:
+  - cluster: app.ci
+    name: promoted-image-governor
     namespace: ci
 - from:
     sa.prow-controller-manager.app.ci.config:
@@ -163,98 +254,7 @@ secret_configs:
   - cluster: app.ci
     name: sinker
     namespace: ci
-- from:
-    sa.dptp-controller-manager.build01.config:
-      field: sa.dptp-controller-manager.build01.config
-      item: build_farm
-    sa.dptp-controller-manager.build99.config:
-      field: sa.dptp-controller-manager.build99.config
-      item: build_farm
-    sa.dptp-controller-manager.build99.token.txt:
-      field: sa.dptp-controller-manager.build99.token.txt
-      item: build_farm
-  to:
-  - cluster: app.ci
-    name: dptp-controller-manager
-    namespace: ci
-- from:
-    sa.ci-operator.arm01.config:
-      field: sa.ci-operator.arm01.config
-      item: build_farm
-    sa.ci-operator.build01.config:
-      field: sa.ci-operator.build01.config
-      item: build_farm
-    sa.pj-rehearse.app.ci.config:
-      field: sa.pj-rehearse.app.ci.config
-      item: build_farm
-  to:
-  - cluster_groups:
-    - build_farm
-    name: pj-rehearse
-    namespace: ci
-- from:
-    sa.github-ldap-user-group-creator.arm01.config:
-      field: sa.github-ldap-user-group-creator.arm01.config
-      item: build_farm
-    sa.github-ldap-user-group-creator.build01.config:
-      field: sa.github-ldap-user-group-creator.build01.config
-      item: build_farm
-    sa.github-ldap-user-group-creator.build99.config:
-      field: sa.github-ldap-user-group-creator.build99.config
-      item: build_farm
-    sa.github-ldap-user-group-creator.build99.token.txt:
-      field: sa.github-ldap-user-group-creator.build99.token.txt
-      item: build_farm
-  to:
-  - cluster: app.ci
-    name: github-ldap-user-group-creator
-    namespace: ci
-- from:
-    sa.promoted-image-governor.build01.config:
-      field: sa.promoted-image-governor.build01.config
-      item: build_farm
-    sa.promoted-image-governor.build99.config:
-      field: sa.promoted-image-governor.build99.config
-      item: build_farm
-    sa.promoted-image-governor.build99.token.txt:
-      field: sa.promoted-image-governor.build99.token.txt
-      item: build_farm
-  to:
-  - cluster: app.ci
-    name: promoted-image-governor
-    namespace: ci
-- from:
-    sa.cluster-display.build01.config:
-      field: sa.cluster-display.build01.config
-      item: build_farm
-    sa.cluster-display.build99.config:
-      field: sa.cluster-display.build99.config
-      item: build_farm
-    sa.cluster-display.build99.token.txt:
-      field: sa.cluster-display.build99.token.txt
-      item: build_farm
-  to:
-  - cluster: app.ci
-    name: cluster-display
-    namespace: ci
-- from:
-    sa.ci-chat-bot.arm01.config:
-      field: sa.ci-chat-bot.arm01.config
-      item: ci-chat-bot
-    sa.ci-chat-bot.build01.config:
-      field: sa.ci-chat-bot.build01.config
-      item: ci-chat-bot
-    sa.ci-chat-bot.build99.config:
-      field: sa.ci-chat-bot.build99.config
-      item: ci-chat-bot
-    sa.ci-chat-bot.build99.token.txt:
-      field: sa.ci-chat-bot.build99.token.txt
-      item: ci-chat-bot
-  to:
-  - cluster: app.ci
-    name: ci-chat-bot-kubeconfigs
-    namespace: ci
-- from: null
+- from: {}
   to:
   - cluster: newCluster
     name: registry-pull-credentials
