--- a/cmd/multi-pr-prow-plugin/testdata/zz_fixture_TestHandle_trigger_a_single_multi_pr_job_run_with_additional_PR_from_a_different_repo.yaml
+++ b/cmd/multi-pr-prow-plugin/testdata/zz_fixture_TestHandle_trigger_a_single_multi_pr_job_run_with_additional_PR_from_a_different_repo.yaml
@@ -26,6 +26,7 @@
       timeout: 8h0m0s
     extra_refs:
     - base_ref: master
+      base_sha: heads/master
       org: openshift
       pulls:
       - author: ""
@@ -76,6 +77,7 @@
           secretName: result-aggregator
     refs:
       base_ref: master
+      base_sha: heads/master
       org: openshift
       pulls:
       - author: ""
