--- a/cmd/multi-pr-prow-plugin/testdata/zz_fixture_TestHandle_trigger_a_single_multi_pr_job_run_with_additional_PR_from_the_same_repo.yaml
+++ b/cmd/multi-pr-prow-plugin/testdata/zz_fixture_TestHandle_trigger_a_single_multi_pr_job_run_with_additional_PR_from_the_same_repo.yaml
@@ -64,6 +64,7 @@
           secretName: result-aggregator
     refs:
       base_ref: master
+      base_sha: heads/master
       org: openshift
       pulls:
       - author: ""
