--- a/cmd/multi-pr-prow-plugin/testdata/zz_fixture_TestHandle_trigger_multiple_multi_pr_job_runs_with_diverse_additional_PRs.yaml
+++ b/cmd/multi-pr-prow-plugin/testdata/zz_fixture_TestHandle_trigger_multiple_multi_pr_job_runs_with_diverse_additional_PRs.yaml
@@ -64,6 +64,7 @@
           secretName: result-aggregator
     refs:
       base_ref: master
+      base_sha: heads/master
       org: openshift
       pulls:
       - author: ""
@@ -106,6 +107,7 @@
       timeout: 8h0m0s
     extra_refs:
     - base_ref: master
+      base_sha: heads/master
       org: openshift
       pulls:
       - author: ""
@@ -156,6 +158,7 @@
           secretName: result-aggregator
     refs:
       base_ref: master
+      base_sha: heads/master
       org: openshift
       pulls:
       - author: ""
@@ -195,6 +198,7 @@
       timeout: 8h0m0s
     extra_refs:
     - base_ref: master
+      base_sha: heads/master
       org: openshift
       pulls:
       - author: ""
@@ -245,6 +249,7 @@
           secretName: result-aggregator
     refs:
       base_ref: master
+      base_sha: heads/master
       org: openshift
       pulls:
       - author: ""
