DPTP-4115: Convert list yaml to yamls

--- a/cmd/sync-rover-groups/testdata/TestNewYamlGroupCollector/invalid_1/1_rolebinding.yaml
+++ b/cmd/sync-rover-groups/testdata/TestNewYamlGroupCollector/invalid_1/1_rolebinding.yaml
@@ -1,9 +1,6 @@
-kind: List
-apiVersion: v1
-items:
-  - kind: Group
-    apiVersion: user.openshift.io/v1
-    metadata:
-      name: ci-admins
-    users:
-      - tom
+kind: Group
+apiVersion: user.openshift.io/v1
+metadata:
+  name: ci-admins
+users:
+  - tom
