Fix permission issue get instance profile

--- a/hack/reduce_nat_gateway_cost/use-nat-instance.yaml
+++ b/hack/reduce_nat_gateway_cost/use-nat-instance.yaml
@@ -37,14 +37,20 @@ Resources:
             Action:
             - iam:CreateInstanceProfile
             - iam:AddRoleToInstanceProfile
+            - iam:GetInstanceProfile
             - iam:CreateRole
             - iam:AttachRolePolicy
             - iam:PutRolePolicy
             - iam:ListInstanceProfiles
+            - iam:ListInstanceProfilesForRole
             - iam:ListRoles
+            - iam:GetRole
+            - iam:ListAttachedRolePolicies
+            - iam:ListRolePolicies
             - iam:DeleteInstanceProfile
             - iam:DeleteRole
             - iam:DetachRolePolicy
+            - iam:RemoveRoleFromInstanceProfile
             - iam:DeleteRolePolicy
             - iam:TagInstanceProfile
             - ssm:GetParameter
