--- a/hack/reduce_nat_gateway_cost/use-nat-instance.yaml
+++ b/hack/reduce_nat_gateway_cost/use-nat-instance.yaml
@@ -8,6 +8,43 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: An AWS Serverless Application Model template describing your function.
 Resources:
+  # IAM Role for NAT instances - allows them to modify route tables and their own attributes
+  NatInstanceRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: use-nat-instance-role
+      Description: Role for NAT instances to modify route tables and instance attributes
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Effect: Allow
+          Principal:
+            Service: ec2.amazonaws.com
+          Action: sts:AssumeRole
+      Policies:
+      - PolicyName: nat-instance-policy
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: Allow
+            Action:
+            - ec2:ReplaceRoute
+            Resource: "*"
+          - Effect: Allow
+            Action:
+            - ec2:CreateTags
+            Resource: "arn:aws:ec2:*:*:route-table/*"
+          - Effect: Allow
+            Action:
+            - ec2:ModifyInstanceAttribute
+            Resource: "*"
+  # Instance Profile that NAT instances will use
+  NatInstanceProfile:
+    Type: AWS::IAM::InstanceProfile
+    Properties:
+      InstanceProfileName: use-nat-instance-profile
+      Roles:
+      - !Ref NatInstanceRole
   UseNatInstanceFunctionRole:
     Type: AWS::IAM::Role
     Properties:
@@ -35,30 +72,12 @@ Resources:
           Statement:
           - Effect: Allow
             Action:
-            - iam:CreateInstanceProfile
-            - iam:AddRoleToInstanceProfile
-            - iam:GetInstanceProfile
-            - iam:CreateRole
-            - iam:AttachRolePolicy
-            - iam:PutRolePolicy
-            - iam:ListInstanceProfiles
-            - iam:ListInstanceProfilesForRole
-            - iam:ListRoles
-            - iam:GetRole
-            - iam:ListAttachedRolePolicies
-            - iam:ListRolePolicies
-            - iam:DeleteInstanceProfile
-            - iam:DeleteRole
-            - iam:DetachRolePolicy
-            - iam:RemoveRoleFromInstanceProfile
-            - iam:DeleteRolePolicy
-            - iam:TagInstanceProfile
             - ssm:GetParameter
             Resource: "*"
           - Effect: Allow
             Action:
             - iam:PassRole
-            Resource: !Sub arn:aws:iam::${AWS::AccountId}:role/Created-*
+            Resource: !GetAtt NatInstanceRole.Arn
   UseNatInstanceLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
