Retain resources on cloud formation deletion Cloud formation IDs are too difficult to keep in sync with PCO pruning. Retain resources and just delete the lambda explicitly on "destroy"

--- a/hack/reduce_nat_gateway_cost/use-nat-instance-forwarders.yaml
+++ b/hack/reduce_nat_gateway_cost/use-nat-instance-forwarders.yaml
@@ -4,6 +4,7 @@ Description: >-
 Resources:
   UseNatInstanceForwardRole:
     Type: AWS::IAM::Role
+    DeletionPolicy: Retain
     Properties:
       Description: |
         Executes the lambda when an expected event is detected.
@@ -33,6 +34,7 @@ Resources:
             Resource: !Sub arn:aws:events:us-east-1:${AWS::AccountId}:event-bus/default
   UseNatInstanceForwardEventRule:
     Type: AWS::Events::Rule
+    DeletionPolicy: Retain
     Properties:
       Name: use-nat-instance-forward-event-rule
       EventPattern: >-
