Improvements to race condition handling and adding monitoring logic

--- a/hack/reduce_nat_gateway_cost/use-nat-instance.yaml
+++ b/hack/reduce_nat_gateway_cost/use-nat-instance.yaml
@@ -30,6 +30,7 @@ Resources:
           - Effect: Allow
             Action:
             - ec2:ReplaceRoute
+            - ec2:DescribeRouteTables
             Resource: "*"
           - Effect: Allow
             Action:
