--- a/pkg/prowgen/testdata/zz_fixture_TestNewProwJobBaseBuilderForTest_multi_stage_test_with_CSI_enabled.yaml
+++ b/pkg/prowgen/testdata/zz_fixture_TestNewProwJobBaseBuilderForTest_multi_stage_test_with_CSI_enabled.yaml
@@ -8,6 +8,7 @@ spec:
   - args:
     - --enable-secrets-store-csi-driver=true
     - --gcs-upload-secret=/secrets/gcs/service-account.json
+    - --gsm-config=/etc/gsm-config/gsm-config.yaml
     - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
     - --report-credentials-file=/etc/report/credentials
     - --target=simple
@@ -23,6 +24,9 @@ spec:
     - mountPath: /secrets/gcs
       name: gcs-credentials
       readOnly: true
+    - mountPath: /etc/gsm-config
+      name: gsm-config
+      readOnly: true
     - mountPath: /secrets/manifest-tool
       name: manifest-tool-local-pusher
       readOnly: true
@@ -34,6 +38,9 @@ spec:
       readOnly: true
   serviceAccountName: ci-operator
   volumes:
+  - configMap:
+      name: gsm-config
+    name: gsm-config
   - name: manifest-tool-local-pusher
     secret:
       secretName: manifest-tool-local-pusher
