rename the autoconfigbrancher tool to auto-config-brancher
Signed-off-by: Nikolaos Moraitis <nmoraiti@redhat.com>

--- a/images/auto-config-brancher/Dockerfile
+++ b/images/auto-config-brancher/Dockerfile
@@ -3,7 +3,7 @@ FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 ADD determinize-ci-operator /usr/bin/determinize-ci-operator
 ADD config-brancher /usr/bin/config-brancher
 ADD ci-operator-prowgen /usr/bin/ci-operator-prowgen
-ADD autoconfigbrancher /usr/bin/autoconfigbrancher
+ADD auto-config-brancher /usr/bin/auto-config-brancher
 ADD ci-operator-config-mirror /usr/bin/ci-operator-config-mirror
 ADD private-prow-configs-mirror /usr/bin/private-prow-configs-mirror
 ADD sanitize-prow-jobs /usr/bin/sanitize-prow-jobs
@@ -18,4 +18,4 @@ RUN microdnf install -y git && \
     microdnf clean all && \
     rm -rf /var/cache/dnf
 
-ENTRYPOINT ["/usr/bin/autoconfigbrancher"]
+ENTRYPOINT ["/usr/bin/auto-config-brancher"]
