Rename prowjobdispatcher and autotestgridgenerator

--- a/images/auto-testgrid-generator/Dockerfile
+++ b/images/auto-testgrid-generator/Dockerfile
@@ -1,10 +1,10 @@
 FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 
 ADD testgrid-config-generator /usr/bin/testgrid-config-generator
-ADD autotestgridgenerator /usr/bin/autotestgridgenerator
+ADD auto-testgrid-generator /usr/bin/auto-testgrid-generator
 
 RUN microdnf install -y git && \
     microdnf clean all && \
     rm -rf /var/cache/dnf
 
-ENTRYPOINT ["/usr/bin/autotestgridgenerator"]
+ENTRYPOINT ["/usr/bin/auto-testgrid-generator"]
