--- a/pkg/prowgen/testdata/zz_fixture_TestNewProwJobBaseBuilderForTest_OpenshiftAnsibleCustomClusterTestConfiguration.yaml
+++ b/pkg/prowgen/testdata/zz_fixture_TestNewProwJobBaseBuilderForTest_OpenshiftAnsibleCustomClusterTestConfiguration.yaml
@@ -16,6 +16,10 @@ spec:
     env:
     - name: CLUSTER_TYPE
       value: alibabacloud
+    - name: HTTP_SERVER_IP
+      valueFrom:
+        fieldRef:
+          fieldPath: status.podIP
     - name: JOB_NAME_SAFE
       value: template1
     - name: RPM_REPO_OPENSHIFT_ORIGIN
@@ -24,6 +28,9 @@ spec:
     image: quay-proxy.ci.openshift.org/openshift/ci:ci_ci-operator_latest
     imagePullPolicy: Always
     name: ""
+    ports:
+    - containerPort: 8080
+      name: http
     resources:
       requests:
         cpu: 10m
